# Todo-Evolution

./: .env.example  .gitignore  AUTH_COMPONENTS_USAGE_GUIDE.md  DEPLOYMENT.md  FRONTEND_IMPORT_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_PHASE3_AUTH_UI.md  INTELLIGENCE_LAYER_SUMMARY.md  PHASE3_ARCHITECTURE_DIAGRAM.md  PHASE3_FILES_CREATED.md  README.md  demo_enhanced.py  demo_todo.py  docker-compose.yml  final_test.py  pyproject.toml  requirements.txt  test_colors.py  test_empty.py  test_enhanced_table.py  test_full_functionality.py  test_intelligence_layer.py  test_many_todos.py  test_performance.py  test_special_chars.py  vercel.json
backend/: .env.example  .flake8  .gitignore  .pylintrc  DATABASE_FIX_SUMMARY.md  DATABASE_TROUBLESHOOTING.md  Dockerfile  README_API.md  SOLUTION_SUMMARY.md  alembic.ini  clear_cache.bat  clear_cache.sh  diagnose_schema.py  force_schema_refresh.py  pyproject.toml  requirements.txt  start_server.sh  test_fastapi_flow.py  test_signup.py  test_sqlalchemy_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_09_0858_initial_models.py  2025_12_13_phase2_task_fields.py  2025_12_17_1303-353d19d8f7af_fix_user_table_constraints.py
backend/src/: main.py
backend/src/api/: auth.py  chat.py  tasks.py  users.py
backend/src/auth/: __init__.py  auth_handler.py  jwt_handler.py
backend/src/database/: __init__.py  database.py  seed.py
backend/src/middleware/: auth_middleware.py  error_handler.py  logging_middleware.py
backend/src/models/: __init__.py  message.py  task.py  user.py
backend/src/schemas/: errors.py  (+2 more)
backend/tests/: conftest.py  test_api_tasks.py  test_auth.py  test_database_operations.py
(+202 files in other folders)
